--- a/Carsharing/register.html
+++ b/Carsharing/register.html
@@ -37,8 +37,7 @@
                 </fieldset>
             </form>
         </div> 
-        <div id = "registerAnswer">
-
+        <div id = "response">
         </div>
     </main> 
 </body>
