trying fixing log in

--- a/Carsharing/login.html
+++ b/Carsharing/login.html
@@ -35,6 +35,8 @@
                         </div>
                 </fieldset>
             </form>
+        </div>
+        <div id="response">
         </div>  
     </main> 
 </body>
