--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script src="registrieren.js" defer></script>
+  <script src="index.js" defer></script>
   <link rel="stylesheet" href ="navistyle.css">
   <link rel="stylesheet" href ="style.css">
 </head>
