start show data

--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -22,6 +22,12 @@
 
     </header>
     <main>
-    </main> 
+        <div  id = "showData">
+           
+        </div>  
+        <div id ="response">
+
+        </div>
+    </main>  
 </body>
 </html>
