--- a/Carsharing/admin.html
+++ b/Carsharing/admin.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
   <script src="admin.js" defer></script>
-  <link rel="stylesheet" href ="navistyle.css">
-  <link rel="stylesheet" href ="adminstyle.css">
-  <link rel="stylesheet" href ="style.css">
+  <link rel="stylesheet" href ="css/navistyle.css">
+  <link rel="stylesheet" href ="css/adminstyle.css">
+  <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header>
