--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
   <script src="index.js" defer></script>
-  <link rel="stylesheet" href ="navistyle.css">
-  <link rel="stylesheet" href ="style.css">
+  <link rel="stylesheet" href ="css/navistyle.css">
+  <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header>
