booking one car

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script src="index.js" defer></script>
+  <script src="bookcar.js" defer></script>
   <link rel="stylesheet" href ="css/navistyle.css">
   <link rel="stylesheet" href ="css/style.css">
 </head>
@@ -13,16 +13,21 @@
     <header>
         <nav>
             <ul class= "nav">
+                <li > <a href="index.html">Home</a></li>
                 <li > <a href="login.html">Einloggen</a></li>
                 <li > <a href="register.html">Registrieren</a></li>
-                <li > <a href="admin.html">Admin</a></li>
             </ul>
         </nav>
-        <h1>Auto Aussuchung</h1>
+        <h1>Auto buchen</h1>
+
     </header>
     <main>
-        <div  id = "showData"> 
+        <div  id = "showCar">
+           
         </div>  
+        <div id ="response">
+
+        </div>
     </main>  
 </body>
 </html>
