check if car is available

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -25,8 +25,13 @@
         <div  id = "showCar">
            
         </div>  
-        <div id ="response">
-
+        <div id ="book">
+            <form id="time">
+                <label for="time"> Zeit Buchen</label>
+                <input type ="datetime-local" id ="datetime" name="booktime"/>
+                <button id = "timebutton">jetzt buchen</button>
+            </form>
+            
         </div>
     </main>  
 </body>
