--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -29,7 +29,7 @@
             <form id="time">
                 <label for="time"> Zeit Buchen</label>
                 <input type ="datetime-local" id ="datetime" name="booktime"/>
-                <button id = "timebutton">jetzt buchen</button>
+                <button id = "timebutton" type ="button">jetzt buchen</button>
             </form>
             
         </div>
