Fixing response write and amount of cars shown

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -30,8 +30,9 @@
                 <label for="time"> Zeit Buchen</label>
                 <input type ="datetime-local" id ="datetime" name="booktime"/>
                 <button id = "timebutton" type ="button">jetzt buchen</button>
-            </form>
-            
+            </form>  
+        </div>
+        <div id = "response">
         </div>
     </main>  
 </body>
