--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -22,6 +22,17 @@
     </header>
     <main>
         <div  id = "showData"> 
+        </div>
+        <div id ="amount">
+            <form id= "amountForm">
+                <label for="amount cars">Anzahl an Autos</label>
+                <select id="quantity" name="quantity">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="all">Alle</option>
+                </select>
+                <button id="submit" type ="button">Ändern</button>
+            </form>
         </div>  
     </main>  
 </body>
