check if user is logged in

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -16,6 +16,9 @@
                 <li > <a href="index.html">Home</a></li>
                 <li > <a href="login.html">Einloggen</a></li>
                 <li > <a href="register.html">Registrieren</a></li>
+                <div id ="logout">
+
+                </div>
             </ul>
         </nav>
         <h1>Auto buchen</h1>
