--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -16,7 +16,12 @@
                 <li > <a href="login.html">Einloggen</a></li>
                 <li > <a href="register.html">Registrieren</a></li>
                 <li > <a href="admin.html">Admin</a></li>
+                <div>
+                    <button id="logout" type ="button">Ausloggen</button>
+                </div>      
             </ul>
+             
+            
         </nav>
         <h1>Auto Aussuchung</h1>
     </header>
