make sure nothing is null

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -31,7 +31,11 @@
         <div id ="book">
             <form id="time">
                 <label for="time"> Zeit Buchen</label>
-                <input type ="datetime-local" id ="datetime" name="booktime"/>
+                <input type ="date" id ="datetime" name="booktime"/>
+                <label for="time">von</label>
+                <input type ="time" id ="time" name="starttime"/>
+                <label for="time">bis</label>
+                <input type ="time" id ="time" name="endtime"/>
                 <button id = "timebutton" type ="button">jetzt buchen</button>
             </form>  
         </div>
