--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -34,8 +34,8 @@
                 <input type ="date" id ="datetime" name="booktime"/>
                 <label for="time">von</label>
                 <input type ="time" id ="time" name="starttime"/>
-                <label for="time">bis</label>
-                <input type ="time" id ="time" name="endtime"/>
+                <label for="duration">Dauer in Minuten</label>
+                <input type ="number" id ="time" name="duration" min="30" step="15"/>
                 <button id = "timebutton" type ="button">jetzt buchen</button>
             </form>  
         </div>
