filter options start

--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -26,6 +26,11 @@
         <h1>Auto Aussuchung</h1>
     </header>
     <main>
+        <div id ="filter">
+            <button id="filterbutton" type ="button">Filters</button>
+        </div>
+        <div id ="filteroptions">
+        </div>
         <div  id = "showData"> 
         </div>
         <div id ="amount">
