--- a/Carsharing/filtercar.html
+++ b/Carsharing/filtercar.html
@@ -23,19 +23,11 @@
              
             
         </nav>
-        <h1>Auto Aussuchung</h1>
+        <h1>Auto Filter</h1>
     </header>
     <main>
         <div id ="filter">
-            <form id= "filterForm">
-                <label for="filter cars">Autos Filtern</label>
-                <select id="filter" name="filter">
-                    <option value="a">Alle Autos</option>
-                    <option value="b">Antriebsart</option>
-                    <option value="c">Datum</option>
-                </select>
-                <button id="filterbutton" type ="button">Filter</button>
-            </form>
+            <button id="filterbutton" type ="button">Filter</button>
         </div>
         <div id ="filteroptions">
         </div>
