updated register and login

--- a/Carsharing/login.html
+++ b/Carsharing/login.html
@@ -14,7 +14,7 @@
     <header>
         <nav >
             <ul class= "nav">
-                <li > <a href="index.html">Home</a></li>
+                <li > <a href="index.html">Autos Aussuchen</a></li>
                 <li > <a href="register.html">Registrieren</a></li>
             </ul>
         </nav>
@@ -22,6 +22,9 @@
 
     </header>
     <main>
+        <div id="registerinfo">
+
+        </div>
         <div  class = "form">
             <form id="logForm">
                 <fieldset id ="fieldform">
