--- a/Carsharing/admin.html
+++ b/Carsharing/admin.html
@@ -41,15 +41,11 @@
                         <label for="id"> Späteste Nutzungsuhrzeit*</label>
                         <input type ="time" id = "time" name = "snut" />
                         <label for="id"> Maximale Nutzungsdauer in Minuten*</label>
-                        <input type ="number" id = "max" name = "max" min="0" />
+                        <input type ="number" id = "max" name = "max" step="15" min="30" />
                         <label for="id"> Pauschaler Nutzungspreis in €*</label>
-                        <input type="number" id = "max" odplaceholder="20€" step="0.01" min="0" name="pnd">
+                        <input type="number" id = "max" odplaceholder="20€" step="0.01" min="2" name="pnd">
                         <label for="id"> Nutzungspreis pro Minute in €*</label>
                         <input type="number" id = "max" placeholder="0.5€" step="0.01" min="0"name="ppmin">
-                            
-
-
-
                         <div>
                             <button id="buttonaddcar" type ="button">Auto hinzufügen</button>
                         </div>
