--- a/Carsharing/register.html
+++ b/Carsharing/register.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class= "nav">
-                <li > <a href="index.html">Home</a></li>
+                <li > <a href="index.html">Autos aussuchen</a></li>
                 <li > <a href="login.html">Login</a></li>
             </ul>
         </nav>
