trying to import own function

--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
   <script src="index.js" defer></script>
-  <link rel="stylesheet" href ="css/navistyle.css">
+  <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class= "nav">
-                <li > <a href="login.html">Einloggen</a></li>
-                <li > <a href="register.html">Registrieren</a></li>
-                <li > <a href="admin.html">Admin</a></li>
-                <div>
-                    <button id="logout" type ="button">Ausloggen</button>
+                <div id="navi">
+                </div>
+                
+                <div id ="logout">
+
                 </div>      
             </ul>
              
