--- a/Carsharing/admin.html
+++ b/Carsharing/admin.html
@@ -14,9 +14,12 @@
     <header>
         <nav>
             <ul class= "nav">
-                <li > <a href="login.html">Einloggen</a></li>
-                <li > <a href="index.html">Home</a></li>
-                <li > <a href="register.html">Registrieren</a></li>
+                <div id="navi">
+                </div>
+                
+                <div id ="logout">
+
+                </div>
             </ul>
         </nav>
         <h1>Autos anlegen</h1>
