--- a/Carsharing/admin.html
+++ b/Carsharing/admin.html
@@ -5,8 +5,8 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script src="admin.js" defer></script>
-  <link rel="stylesheet" href ="css/navistyle.css">
+  <script  type ="module" src="admin.js"></script>
+  <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/adminstyle.css">
   <link rel="stylesheet" href ="css/style.css">
 </head>
