--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script src="bookcar.js" defer></script>
+  <script type ="module" src="bookcar.js" defer></script>
   <link rel="stylesheet" href ="css/navistyle.css">
   <link rel="stylesheet" href ="css/style.css">
 </head>
