car booking with time filter

--- a/Carsharing/bookcar.html
+++ b/Carsharing/bookcar.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
   <script type ="module" src="bookcar.js" defer></script>
-  <link rel="stylesheet" href ="css/navistyle.css">
+  <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class= "nav">
-                <li > <a href="index.html">Zurück</a></li>
-                <li > <a href="login.html">Einloggen</a></li>
-                <li > <a href="register.html">Registrieren</a></li>
+                <div id="navi">
+                </div>
+                
                 <div id ="logout">
 
                 </div>
