--- a/Carsharing/statistic.html
+++ b/Carsharing/statistic.html
@@ -8,6 +8,7 @@
   <script type ="module" src="statstic.js" defer></script>
   <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/style.css">
+  <link rel="stylesheet" href ="css/statisticstyle.css">
 </head>
 <body>
     <header>
