--- a/Carsharing/index.html
+++ b/Carsharing/index.html
@@ -8,6 +8,7 @@
   <script type ="module" src="index.js" defer></script>
   <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/style.css">
+  <link rel="stylesheet" href ="css/table.css"> 
 </head>
 <body>
     <header>
