--- a/Carsharing/admin.html
+++ b/Carsharing/admin.html
@@ -43,7 +43,7 @@
                         <label for="id"> Späteste Nutzungsuhrzeit*</label>
                         <input type ="time" id = "time" name = "snut" />
                         <label for="id"> Maximale Nutzungsdauer in Minuten*</label>
-                        <input type ="number" id = "max" name = "max" step="15" min="30" />
+                        <input type ="number" id = "max" placeholder="60" name = "max" step="15" min="30" />
                         <label for="id"> Pauschaler Nutzungspreis in €*</label>
                         <input type="number" id = "max" odplaceholder="20€" step="0.01" min="2" name="pnd">
                         <label for="id"> Nutzungspreis pro Minute in €*</label>
