--- a/Carsharing/login.html
+++ b/Carsharing/login.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script src="login.js" defer></script>
+  <script type ="module" src="login.js" defer></script>
   <link rel="stylesheet" href ="css/navistyle.css">
   <link rel="stylesheet" href ="css/formstyle.css">
   <link rel="stylesheet" href ="css/style.css">
