--- a/Carsharing/statistic.html
+++ b/Carsharing/statistic.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script type ="module" src="statstic.js" defer></script>
+  <script type ="module" src="./class/statstic.js" defer></script>
   <link rel="stylesheet" href ="css/generatednav.css">
   <link rel="stylesheet" href ="css/style.css">
   <link rel="stylesheet" href ="css/statisticstyle.css">
