--- a/Carsharing/html/register.html
+++ b/Carsharing/html/register.html
@@ -5,10 +5,10 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script type ="module" src="register.js" defer></script>
-  <link rel="stylesheet" href ="css/navistyle.css">
-  <link rel="stylesheet" href ="css/formstyle.css">
-  <link rel="stylesheet" href ="css/style.css">
+  <script type ="module" src="../register.js" defer></script>
+  <link rel="stylesheet" href ="../css/navistyle.css">
+  <link rel="stylesheet" href ="../css/formstyle.css">
+  <link rel="stylesheet" href ="../css/style.css">
 
 </head>
 <body>
