--- a/Carsharing/html/admin.html
+++ b/Carsharing/html/admin.html
@@ -5,10 +5,10 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script  type ="module" src="./class/admin.js"></script>
-  <link rel="stylesheet" href ="css/generatednav.css">
-  <link rel="stylesheet" href ="css/adminstyle.css">
-  <link rel="stylesheet" href ="css/style.css">
+  <script  type ="module" src="../class/admin.js"></script>
+  <link rel="stylesheet" href ="../css/generatednav.css">
+  <link rel="stylesheet" href ="../css/adminstyle.css">
+  <link rel="stylesheet" href ="../css/style.css">
 </head>
 <body>
     <header>
