--- a/Carsharing/html/index.html
+++ b/Carsharing/html/index.html
@@ -5,10 +5,10 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script type ="module" src="index.js" defer></script>
-  <link rel="stylesheet" href ="css/generatednav.css">
-  <link rel="stylesheet" href ="css/style.css">
-  <link rel="stylesheet" href ="css/table.css"> 
+  <script type ="module" src="../index.js" defer></script>
+  <link rel="stylesheet" href ="../css/generatednav.css">
+  <link rel="stylesheet" href ="../css/style.css">
+  <link rel="stylesheet" href ="../css/table.css"> 
 </head>
 <body>
     <header>
