--- a/Carsharing/html/statistic.html
+++ b/Carsharing/html/statistic.html
@@ -5,10 +5,10 @@
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=devine-width,initial-scale=1.0">
   <title> Formular</title>
-  <script type ="module" src="bookcar.js" defer></script>
-  <link rel="stylesheet" href ="css/generatednav.css">
-  <link rel="stylesheet" href ="css/style.css">
-  <link rel="stylesheet" href ="css/table.css"> 
+  <script type ="module" src="../class/statstic.js" defer></script>
+  <link rel="stylesheet" href ="../css/generatednav.css">
+  <link rel="stylesheet" href ="../css/style.css">
+  <link rel="stylesheet" href ="../css/statisticstyle.css">
 </head>
 <body>
     <header>
@@ -19,19 +19,19 @@
                 
                 <div id ="logout">
 
-                </div>
-            </ul>
+                </div>      
+            </ul>   
         </nav>
-        <h1>Auto buchen</h1>
-
+        <h1>Statistik</h1>
     </header>
     <main>
-        <div  id = "showCar">
-        </div>  
-        <div id ="book">  
+        <div id="statistic">
+
         </div>
-        <div id = "response">
+        <div id ="fullstatistic">
+
         </div>
+        
     </main>  
 </body>
 </html>
