--- a/Carsharing/html/login.html
+++ b/Carsharing/html/login.html
@@ -31,7 +31,7 @@
                     <legend> Felder mit* sind erforderlich</legend>
                         <label for="username"> Benutzername*</label>
                         <input type ="text" id="username" name="username" />      
-                        <label for = "password"> Password*</label>  
+                        <label for = "password"> Passwort*</label>  
                         <input type ="password" id = "password" name = "password"/>
                         <div>
                             <button id="login" type ="button">Einloggen</button>
