--- a/Carsharing/html/register.html
+++ b/Carsharing/html/register.html
@@ -29,7 +29,7 @@
                     <legend> Felder mit* sind erforderlich</legend>
                         <label for="username"> Benutzername*</label>
                         <input type ="text" id ="username" name ="username"/>
-                        <label for = "password"> Password*</label>
+                        <label for = "password"> Passwort*</label>
                         <input type ="password" id = "password" name = "password" />
                         <div>
                             <button id="register" type ="button">Registrieren</button>
